# Translation-Aggregator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Translation Aggregator.sln  meson.build
.github/workflows/: ci.yml
Miscellaneous/: CompileConjugations.cpp
Sample Dll/: SampleDll.cpp  SampleDll.def  SampleDll.sln  SampleDll.vcproj  TAPlugin.h
Shared/: ConversionTable.cpp  DllInjection.cpp  EUCJPtoUTF16.cpp  InjectionSettings.h  Lock.cpp  Lock.h  ProcessUtil.h  ReadWriteLock.cpp  Shrink.cpp  Shrink.h  StringUtil.h  TextHookParser.cpp  TextHookParser.h
Text Replacement Hook (Not used)/: FontOverride.cpp  FontOverride.h  Link Table.cpp  MyDirectDraw.cpp  MyDirectDraw.h  WindowManager.cpp  WindowManager.h
dll/: GetText.cpp  GetText.h  Translation Aggregator dll.cpp  Translation Aggregator dll.vcproj  Translation Aggregator dll.vcxproj  Translation Aggregator dll.vcxproj.filters  WindowTranslator.cpp  WindowTranslator.h
dll/Hooks/: HookManager.cpp  HookManager.h  TextHooks.cpp  TextHooks.h  disasm.cpp  disasm.h
docs/: ChangeLog.txt  Hook Codes.txt
exe/: BufferedSocket.cpp  BufferedSocket.h  Config.cpp  Config.h  Context.cpp  Context.h  Filter.cpp  Filter.h  Makefile  Translation Aggregator.cpp  Translation Aggregator.rc  Translation Aggregator.vcxproj  Translation Aggregator.vcxproj.filters  TranslationAggregator.cpp  TranslationAggregator.ini  TranslationAggregator.res.rc  resource.h
exe/Dialogs/: InjectionDialog.cpp  InjectionDialog.h  MyToolTip.cpp  MyToolTip.h
exe/History/: History.cpp  History.h
exe/TranslationWindows/: TranslationWindow.cpp  TranslationWindow.h  TranslationWindowFactory.cpp  TranslationWindowFactory.h
exe/TranslationWindows/HttpWindows/: BabelfishWindow.cpp  BabelfishWindow.h  BabylonWindow.cpp  BabylonWindow.h  BaiduWindow.cpp  BaiduWindow.h  BingWindow.cpp  BingWindow.h  DeepLWindow.cpp  DeepLWindow.h  ExciteWindow.cpp  ExciteWindow.h  FreeTranslationWindow.cpp  FreeTranslationWindow.h  GoogleWindow.cpp  GoogleWindow.h  HonyakuWindow.cpp  HonyakuWindow.h  HttpWindow.cpp  HttpWindow.h  InfoseekWindow.cpp  InfoseekWindow.h  JdicWindow.cpp  JdicWindow.h  LECOnlineWindow.cpp  LECOnlineWindow.h  SDLWindow.cpp  SDLWindow.h  SysTranWindow.cpp  SysTranWindow.h  YandexWindow.cpp  YandexWindow.h
exe/TranslationWindows/LocalWindows/: AtlasWindow.cpp  AtlasWindow.h  FuriganaWindow.cpp  FuriganaWindow.h  JParseWindow.cpp  JParseWindow.h  LECWindow.cpp  LECWindow.h  MecabWindow.cpp  MecabWindow.h  UntranslatedWindow.cpp  UntranslatedWindow.h
exe/util/: Dictionary.cpp  Dictionary.h  DictionaryUtil.cpp  DictionaryUtil.h  HttpUtil.cpp  HttpUtil.h  Injector.cpp  Injector.h  Mecab.cpp  Mecab.h  Regexp.cpp  Regexp.h  Value.cpp  Value.h
shared/: Atlas.cpp  Atlas.h  ConversionTable.cpp  ConversionTable.h  DllInjection.cpp  DllInjection.h  EUCJPtoUTF16.cpp  HookEval.cpp  HookEval.h  InjectionSettings.h  Lock.cpp  Lock.h  ProcessUtil.cpp  ProcessUtil.h  ReadWriteLock.cpp  ReadWriteLock.h  Shrink.cpp  Shrink.h  StringUtil.cpp  StringUtil.h  TAPlugin.h  TextHookParser.cpp  TextHookParser.h  TextRuleSet.cpp  TextRuleSet.h  Thread.cpp  Thread.h  scoped_ptr.h
